2010-11-13  Torbjorn Granlund  <tege@gmplib.org>

	* tests/devel/try.c (malloc_region): Add explicit casts for type
	conversions.

	* acinclude.m4 (GMP_ASM_RODATA): Make test code snippet C++ compatible.
	(GMP_C_DOUBLE_FORMAT): Likewise.
	(GMP_FUNC_VSNPRINTF): Likewise.
	
	* config.guess (x86): Make test C snippet C++ compatible.

2010-11-12  Torbjorn Granlund  <tege@gmplib.org>

	* Makefile.am: Remove mpbsd.
	* configure.in: Remove mpbsd.
	* doc/configuration: Remove mpbsd mentions.
	* doc/gmp.texi: Remove mpbsd docs.
	* tests/Makefile.am: Remove mpbsd.
	* libmp.sym: Remove.
	* mpbsd: Remove directory and files.
	* tests/mpbsd: Remove directory and files.

2010-11-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/atom/aors_n.asm: Don't rely on ZF after 'bt' insn.
	Use 64-bit 'test' to support operands of 2^32 limbs and more.

	* rand: New directory, move rand*.c and randmt.h here.
	* rand/Makefile.am: New file.
	* Makefile.am (SUBDIRS): Add rand.
	(RANDOM_OBJECTS): New variable.
	(libgmp_la_SOURCES): Remove random objects.
	(libgmp_la_DEPENDENCIES): Add RANDOM_OBJECTS.
	* configure.in (AC_OUTPUT): Add rand/Makefile.

	* ansi2knr.1: File removed.
	* ansi2knr.c: File removed.

2010-11-10  Torbjorn Granlund  <tege@gmplib.org>

	Make it possible to compile GMP with g++:

	* gmp-impl.h: Declare __gmp_digit_value_tab here.
	* mpbsd/min.c: ...not here.
	* mpbsd/xtom.c: ...nor here.
	* mpf/set_str.c: ...nor here.
	* mpz/inp_str.c: ...nor here.
	* mpz/set_str.c: ...nor here.

	* mpn/generic/toom43_mul.c: Add casts for logical operations on enums.
	* mpn/generic/toom44_mul.c: Likewise.
	* mpn/generic/toom4_sqr.c: Likewise.
	* mpn/generic/toom52_mul.c: Likewise.
	* mpn/generic/toom53_mul.c: Likewise.
	* mpn/generic/toom62_mul.c: Likewise.

	* mpz/clrbit.c: Clean up typing using MPZ_REALLOC.
	* mpz/setbit.c: Likewise.

	* mpz/powm.c: Avoid variable name 'new'.

	* randlc2x.c: Add explicit casts for type conversions.
	* tests/misc/t-printf.c: Likewise.